adding real score and lives feature

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 
   <!-- Game Container -->
   <div id="game-container">
-    <div id="scoreboard">Score: <span id="score">10</span> | High Score: <span id="high-score">0</span></div>
+    <div id="scoreboard">Score: <span id="score">0</span> | High Score: <span id="high-score">0</span></div>
+    <div id="livesboard">Lives : <span id="lives">10</span></div>
     <div id="camion"></div>
   </div>
 
