--- a/index.html
+++ b/index.html
@@ -12,7 +12,25 @@
   <!-- Welcome Screen -->
   <div id="welcome-screen">
     <h1>Recycle Catcher Game</h1>
+    <button id="rules-button">Game Rules</button>
     <button id="start-button">Start Game</button>
+  </div>
+
+  <!-- Game Rules Screen -->
+  <div id="rules-screen">
+    <h1>Game Rules</h1>
+    <div id="rules-list">
+      <ul>
+        <li>You're driving a truck to collect Recyclables.</li>
+        <li>Each time you collect a recyclable item, you'll increase your score. Each time you miss one, you'll lose one life. The game is lost once you run out of lives</li>
+        <li>Some items should not go in the recyclable bin! Don't collect them or you'll lose more lives.</li>
+        <li>The higher your score gets, the quicker the items fall ! Sharpen your reflexes if you want to become a sorting hero!</li>
+      </ul>
+    </div>
+    <div id="ready-to-play">
+      <p>Are you ready to play ?</p>
+      <button id="start-button">Start Game</button>
+    </div>
   </div>
 
   <!-- Game Container -->
