adding more items, and applying a background

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <div id="welcome-screen">
     <h1>Recycle Catcher Game</h1>
     <button id="rules-button">Game Rules</button>
-    <button id="start-button">Start Game</button>
+    <button class="start-game-button">Start Game</button>
   </div>
 
   <!-- Game Rules Screen -->
@@ -29,12 +29,13 @@
     </div>
     <div id="ready-to-play">
       <p>Are you ready to play ?</p>
-      <button id="start-button">Start Game</button>
+      <button class="start-game-button">Start Game</button>
     </div>
   </div>
 
   <!-- Game Container -->
   <div id="game-container">
+    <div class="background-container"></div>
     <div id="scoreboard">Score: <span id="score">0</span> | High Score: <span id="high-score">0</span></div>
     <div id="livesboard">Lives : <span id="lives">10</span></div>
     <div id="camion"></div>
